force-app/main/default/objects/Competitor_Product__c/fields/Activate_Price_Capture__c.field-meta.xml
<CustomField>
    <fullName>Activate_Price_Capture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Price Capture</label>
    <type>Checkbox</type>
</CustomField>