force-app/main/default/objects/Competitor_Product__c/fields/Competitive_Behavior__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Behavior__c</fullName>
    <description>Captures the behavior of the competitor for this specific product</description>
    <label>Competitive Behavior</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aggressive</fullName>
            </value>
            <value>
                <fullName>Disciplined</fullName>
            </value>
            <value>
                <fullName>Out of position</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>