force-app/main/default/objects/Competitor_Product__c/fields/Competitive_Behavior_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Behavior_Other_Description__c</fullName>
    <label>Competitive Behavior Other Description</label>
    <type>TextArea</type>
</CustomField>