force-app/main/default/objects/Competitor_Product__c/fields/Positioning__c.field-meta.xml
<CustomField>
    <fullName>Positioning__c</fullName>
    <label>Positioning</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sustainability</fullName>
            </value>
            <value>
                <fullName>GMO-free</fullName>
            </value>
            <value>
                <fullName>Natural</fullName>
            </value>
            <value>
                <fullName>Low Calorie</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Healthy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>