force-app/main/default/objects/Competitor_Product__c/fields/Price_Point_Source__c.field-meta.xml
<CustomField>
    <fullName>Price_Point_Source__c</fullName>
    <label>Price Point Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Internal Estimate</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Retail/consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>