force-app/main/default/objects/Competitor_Product__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Product Line A</fullName>
            </value>
            <value>
                <fullName>Product Line B</fullName>
            </value>
            <value>
                <fullName>Product Line C</fullName>
            </value>
            <value>
                <fullName>Product Line D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>