force-app/main/default/objects/Competitor_Product__c/fields/Sub_sector_segment_application__c.field-meta.xml
<CustomField>
    <fullName>Sub_sector_segment_application__c</fullName>
    <description>What particular sub sector/segment/application are they focusing on?</description>
    <inlineHelpText>What particular sub sector/segment/application are they focusing on?</inlineHelpText>
    <label>Sub sector/segment/application</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bakery</fullName>
            </value>
            <value>
                <fullName>Snacks &amp; cereals</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Confection</fullName>
            </value>
            <value>
                <fullName>Convenience Foods</fullName>
            </value>
            <value>
                <fullName>Infant and Baby Food</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Fruit</fullName>
            </value>
            <value>
                <fullName>Meat</fullName>
            </value>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Personal Care</fullName>
            </value>
            <value>
                <fullName>Pet Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>