force-app/main/default/objects/Competitor_Product__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <label>Total Capacity</label>
    <summarizedField>Plant_Location_Product__c.Capacity__c</summarizedField>
    <summaryForeignKey>Plant_Location_Product__c.Competitor_Product__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>